--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/7086ac27b5.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Teach R</title>
   </head>
   <body>
